--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,9 @@ body {
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
+
+  /* Remove shaking in h1 animation */
+  backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -64,6 +67,11 @@ body {
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 35px;
+
+  animation: moveInLeft 0.8s ease-out;
+
+  /* animation-delay: 3s;
+  animation-iteration-count: 3; */
 }
 
 .heading-primary-sub {
@@ -71,4 +79,36 @@ body {
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 17.4px;
+
+  animation: moveInRight 0.8s ease-out;
+}
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  80% {
+    opacity: 0.2;
+    transform: translateX(10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  80% {
+    opacity: 0.3;
+    transform: translateX(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
