--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,7 +9,10 @@ $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
 
+// FONT
+$default-font-size: 1.6rem;
+
 // GRID
-$grid-width: 144rem;
+$grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
