--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -14,6 +14,16 @@
   // & > * {
   //   transform: skewX(12deg); Doesnt work for the shape bc an element cant have 2 transform properties
 
+  @include respond(tab-port) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+
+  @include respond(phone) {
+    transform: skew(0);
+  }
+
   &__shape {
     width: 15rem;
     height: 15rem;
@@ -30,6 +40,10 @@
     //to move float element, shouldn't use margin or padding
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+
+    @include respond(phone) {
+      transform: translateX(-3rem) skewX(0);
+    }
   }
 
   &__img {
@@ -41,6 +55,10 @@
 
   &__text {
     transform: skewX(12deg);
+
+    @include respond(phone) {
+      transform: skewX(0);
+    }
   }
 
   &__caption {
