--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -21,7 +21,7 @@
   margin-top: -12vh;
   transform: skewY(-7deg);
 
-  // Selec direct children ">"
+  // Select direct children ">"
   & > * {
     transform: skewY(7deg);
   }
@@ -66,6 +66,7 @@
 .book {
   background-image: linear-gradient(
       105deg,
+      rgba($color-white, 0.9) 0%,
       rgba($color-white, 0.9) 50%,
       transparent 50%
     ),
@@ -74,10 +75,35 @@
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
 
-  height: 50rem;
+  @include respond(tab-land) {
+    background-image: linear-gradient(
+        105deg,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 65%,
+        transparent 65%
+      ),
+      url(../img/nat-10.jpg);
+    background-size: cover;
+  }
+
+  @include respond(tab-port) {
+    background-image: linear-gradient(
+        to right,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 100%
+      ),
+      url(../img/nat-10.jpg);
+  }
 
   &__form {
     width: 50%;
     padding: 6rem;
+
+    @include respond(tab-land) {
+      width: 65%;
+    }
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
 }
