Responsive Image in CSS

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -15,7 +15,7 @@
       rgba($color-primary-light, 0.8),
       rgba($color-primary-dark, 0.8)
     ),
-    url(/img/nat-4.jpg);
+    url(/img/nat-4-small.jpg);
   background-size: cover;
 
   margin-top: -12vh;
@@ -24,6 +24,15 @@
   // Select direct children ">"
   & > * {
     transform: skewY(7deg);
+  }
+
+  @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
+    background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 0.8),
+        rgba($color-primary-dark, 0.8)
+      ),
+      url(/img/nat-4.jpg);
   }
 
   @include respond(tab-port) {
@@ -70,10 +79,20 @@
       rgba($color-white, 0.9) 50%,
       transparent 50%
     ),
-    url(../img/nat-10.jpg);
+    url(../img/nat-10-small.jpg);
   background-size: cover; //Same as 100%
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
+
+  @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
+    background-image: linear-gradient(
+        105deg,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 50%,
+        transparent 50%
+      ),
+      url(../img/nat-10.jpg);
+  }
 
   @include respond(tab-land) {
     background-image: linear-gradient(
