--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -76,7 +76,17 @@
           $color-secondary-dark
         ),
         url(../img/nat-5.jpg);
+
+      @media (max-width: 180em) {
+        background-image: linear-gradient(
+            to right bottom,
+            $color-secondary-light,
+            $color-secondary-dark
+          ),
+          url(../img/nat-5-small.jpg);
+      }
     }
+
     &--2 {
       background-image: linear-gradient(
           to right bottom,
@@ -84,6 +94,15 @@
           $color-primary-dark
         ),
         url(../img/nat-6.jpg);
+
+      @media (max-width: 180em) {
+        background-image: linear-gradient(
+            to right bottom,
+            $color-primary-light,
+            $color-primary-dark
+          ),
+          url(../img/nat-6-small.jpg);
+      }
     }
     &--3 {
       background-image: linear-gradient(
@@ -92,6 +111,15 @@
           $color-tertiary-dark
         ),
         url(../img/nat-7.jpg);
+
+      @media (max-width: 180em) {
+        background-image: linear-gradient(
+            to right bottom,
+            $color-tertiary-light,
+            $color-tertiary-dark
+          ),
+          url(../img/nat-7-small.jpg);
+      }
     }
   }
 
