Test for Brower Support with @support

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -13,6 +13,7 @@
     left: 0;
     width: 100%;
     //Hide the back part of an element
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     border-radius: 3px;
     overflow: hidden;
