--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -17,9 +17,9 @@
   }
 
   //Normal phone has density is 2 dpr, 600px*2 = 1200px, 1200px image is enough
-  @media (min-resolution: 192dpi) and (min-width: 37.5em),
-    (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-    (min-width: 125em) {
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    only screen and (min-width: 125em) {
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.8),
