--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -73,15 +73,15 @@
   }
 
   //Open states
-  &:target {
-    opacity: 1;
-    visibility: visible;
-  }
+  // &:target {
+  //   opacity: 1;
+  //   visibility: visible;
+  // }
 
-  &:target &__content {
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
-  }
+  // &:target &__content {
+  //   opacity: 1;
+  //   transform: translate(-50%, -50%) scale(1);
+  // }
 
   &__close {
     &:link,
